--- a/MyNameList.csproj
+++ b/MyNameList.csproj
@@ -95,10 +95,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -106,9 +102,11 @@
     <Compile Include="Data\AppData.cs" />
     <Compile Include="Data\NameListOperator.cs" />
     <Compile Include="Data\NameModel.cs" />
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
+    <Compile Include="UI\CommonErrorDialog.xaml.cs">
+      <DependentUpon>CommonErrorDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\MyNameListMain.xaml.cs">
+      <DependentUpon>MyNameListMain.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -148,6 +146,20 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="app_icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="UI\AppStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\CommonErrorDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\MyNameListMain.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
