--- a/MyNameList.csproj
+++ b/MyNameList.csproj
@@ -99,7 +99,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Component\TextBoxEx.cs" />
     <Compile Include="Data\AppData.cs" />
+    <Compile Include="Data\CommonErrorDialogModel.cs" />
     <Compile Include="Data\NameListOperator.cs" />
     <Compile Include="Data\NameModel.cs" />
     <Compile Include="UI\CommonErrorDialog.xaml.cs">
@@ -108,6 +110,7 @@
     <Compile Include="UI\MyNameListMain.xaml.cs">
       <DependentUpon>MyNameListMain.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Util\AppCommon.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -148,6 +151,10 @@
     <Resource Include="app_icon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="UI\AppStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -160,6 +167,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Test\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
