--- a/MyNameList.csproj
+++ b/MyNameList.csproj
@@ -75,6 +75,9 @@
     <Reference Include="MyLib">
       <HintPath>Libs\MyLib.dll</HintPath>
     </Reference>
+    <Reference Include="MyLib.File">
+      <HintPath>Libs\MyLib.File.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
