ワーディング定義の追加 ファイルメニューのUI組み込み

--- a/MyNameList.csproj
+++ b/MyNameList.csproj
@@ -117,7 +117,8 @@
       <DependentUpon>MyNameListMain.xaml</DependentUpon>
     </Compile>
     <Compile Include="Util\AppCommon.cs" />
-    <Compile Include="Util\Wording.cs" />
+    <Compile Include="Wording\Labels.cs" />
+    <Compile Include="Wording\Titles.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
