--- a/MyNameList.csproj
+++ b/MyNameList.csproj
@@ -102,6 +102,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Component\Extensions.cs" />
     <Compile Include="Component\TextBoxEx.cs" />
     <Compile Include="Data\AppData.cs" />
     <Compile Include="Data\CommonErrorDialogModel.cs" />
